--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,6 +7,7 @@
     "16": "images/icon-16.png",
     "19": "images/icon-19.png",
     "38": "images/icon-38.png",
+    "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
   "author": "Marco Chávez",
